--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
         <table id="wordTable">
             <thead>
                 <tr>
-                    <th>Фраза</th>
+                    <th>Фраза1</th>
                     <th>Перевод/Объяснение</th>
                 </tr>
             </thead>
