--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Starter">
 	<meta name="author" content="Admin">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<title>Starter</title>
+	<title>tablica</title>
 
 	<link rel="icon" href="images/favicon.png">
 
@@ -19,13 +19,13 @@
 	<![endif]-->
 </head>
 <body>
-    <div class="container">
+	<div class="container">
         <h1>Таблица слов</h1>
         <table id="wordTable">
             <thead>
                 <tr>
-                    <th>Фраза1</th>
-                    <th>Перевод/Объяснение</th>
+                    <th>Фраза</th>
+                    <th>Объяснение</th>
                 </tr>
             </thead>
             <tbody>
