--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Starter">
 	<meta name="author" content="Admin">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<title>tablica</title>
+	<title>Nomen-Verb-Verbindung</title>
 
 	<link rel="icon" href="images/favicon.png">
 
@@ -20,12 +20,18 @@
 </head>
 <body>
 	<div class="container">
-        <h1>Таблица слов</h1>
+        <nav>
+            <a href="116.html">116</a>
+            <a href="118.html">118</a>
+            <a href="#.html">120</a>
+            <button id="toggle-button">Dunkelmodus</button>
+        </nav>
+        <h1>120</h1>
         <table id="wordTable">
             <thead>
                 <tr>
-                    <th>Фраза</th>
-                    <th>Объяснение</th>
+                    <th>Deutsch Ausdruck</th>
+                    <th>Bedeutung</th>
                 </tr>
             </thead>
             <tbody>
@@ -195,6 +201,8 @@
                 </tr>
             </tbody>
         </table>
+        <footer>
+            <p>&copy; <a href="https://t.me/shur_shun">shur_shun</a> .</p>
     </div>
 
 	<!--build:js js/main.min.js -->
